# simbuto

./: .gitignore  Makefile  Makefile.in  README.md  config.status  configure  configure.ac
debian/: changelog  control  copyright  prerm  rules  simbuto.docs  simbuto.manpages  simbuto.sharedmimeinfo
etc/simbuto/conf/: gui.conf  gui.conf.in
etc/simbuto/skel/simbuto-home/conf/: simbuto.conf
etc/simbuto/skel/simbuto-home/plots/: README.md
lib/simbuto/python/simbuto/: __init__.py.in  config.py  config.py.in  manager.py  manager.py.in
lib/simbuto/python/simbuto/gui/: editor.py
locale/de/LC_MESSAGES/: simbuto.po
locale/fr/LC_MESSAGES/: simbuto.po
locale/sv/LC_MESSAGES/: simbuto.po
man/man1/: simbuto.1.md
share/applications/: simbuto.desktop  simbuto.desktop.in
share/metainfo/: de.nobodyinperson.simbuto.metainfo.xml
share/simbuto/gui/: simbuto.glade
usr/lib/simbuto/python/simbuto/: __init__.py  config.py  gui.py  manager.py  signalmanager.py  utils.py
usr/lib/simbuto/python/simbuto/gui/: __init__.py
usr/lib/simbuto/r/: simbuto-functions.R
usr/share/applications/: simbuto.desktop
usr/share/doc/simbuto/manpages/: simbuto.1.md
usr/share/simbuto/: README.md
usr/share/simbuto/gui/: simbuto.glade
usr/share/simbuto/lang/de/LC_MESSAGES/: simbuto.po
usr/share/simbuto/lang/fr/LC_MESSAGES/: simbuto.po
usr/share/simbuto/lang/sv/LC_MESSAGES/: simbuto.po
